[gd_scene load_steps=13 format=3 uid="uid://b6f8nv3ycye4e"]

[ext_resource type="Material" uid="uid://das1fjm6135fh" path="res://materials/metallic.tres" id="1_debqx"]
[ext_resource type="Script" uid="uid://cjhvyqyb24cuc" path="res://entities/turret_enemy/turret_enemy.gd" id="1_pkk14"]
[ext_resource type="PackedScene" uid="uid://bnbpymnuwf6bt" path="res://entities/enemy/base/enemy.tscn" id="2_exgmt"]
[ext_resource type="Texture2D" uid="uid://chu22fldtwf8m" path="res://entities/enemy/exclamation_mark.png" id="4_2nlth"]
[ext_resource type="PackedScene" uid="uid://bfox7po21r5bs" path="res://entities/bullet/bullet.tscn" id="5_7a6lq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t2aop"]
albedo_color = Color(1, 0.258824, 0.258824, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_7cdj7"]
radius = 40.0

[sub_resource type="StandardMaterial3D" id="6"]
transparency = 1
albedo_texture = ExtResource("4_2nlth")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_rgjsy"]
material = SubResource("6")
size = Vector2(3, 3)

[sub_resource type="SphereShape3D" id="SphereShape3D_2f36p"]
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pc72f"]
height = 10.0
radius = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ajfqv"]
size = Vector3(2, 7.5, 5)

[node name="TurretEnemy" type="Node3D"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
script = ExtResource("1_pkk14")
bullet_scene = ExtResource("5_7a6lq")

[node name="Float" type="CSGCylinder3D" parent="."]
use_collision = true
collision_layer = 66
collision_mask = 3
radius = 4.0
height = 1.25
sides = 10
material = SubResource("StandardMaterial3D_t2aop")

[node name="Structure" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)
use_collision = true
collision_layer = 66
collision_mask = 3
radius = 3.0
height = 3.0
material = ExtResource("1_debqx")

[node name="Cockpit" type="CSGCylinder3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.692038)
operation = 2
use_collision = true
collision_layer = 2
radius = 3.0
height = 4.0

[node name="Cockpit Floor" type="CSGCylinder3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.58555, 0)
use_collision = true
collision_layer = 66
collision_mask = 3
radius = 3.0
height = 0.5
material = ExtResource("1_debqx")

[node name="Cannon" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.6, -4.5)
use_collision = true
collision_layer = 66
collision_mask = 3
height = 3.5
material = ExtResource("1_debqx")

[node name="Enemy" parent="." instance=ExtResource("2_exgmt")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.800928, 0)

[node name="Area3D" type="Area3D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_7cdj7")

[node name="ExclamationMark" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.95, 0)
visible = false
mesh = SubResource("QuadMesh_rgjsy")

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GunTimer" type="Timer" parent="."]

[node name="PilotArea3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PilotArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("SphereShape3D_2f36p")

[node name="PlayerDetection" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
shape = SubResource("CylinderShape3D_pc72f")

[node name="PlayerDetection2" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetection2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.75, -3.75)
shape = SubResource("BoxShape3D_ajfqv")

[node name="ReferenceBullet" parent="." instance=ExtResource("5_7a6lq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, -6)
top_level = false
visible = false

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="body_exited" from="PilotArea3D" to="." method="_on_pilot_area_3d_body_exited"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDetection2" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection2" to="." method="_on_player_detection_body_exited"]
